# RanVisualizer

./: CMakeLists.txt  LICENSE  README.md
scripts/: package_release.ps1
src/: main.cpp
src/app/: App.cpp  App.h  AppCommands.h  Hotkeys.cpp  Hotkeys.h  MainWindow.cpp  MainWindow.h  OverlayWindow.cpp  OverlayWindow.h  Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h
src/audio/: DeviceNotifier.cpp  DeviceNotifier.h  LoopbackCapture.cpp  LoopbackCapture.h  WaveFormatUtil.cpp  WaveFormatUtil.h
src/dsp/: AnalysisFrame.h  BandMapper.cpp  BandMapper.h  Fft.cpp  Fft.h  Smoothing.cpp  Smoothing.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  Window.cpp  Window.h
src/platform/: WindowStyles.cpp  WindowStyles.h
src/render/: AnimationState.cpp  AnimationState.h  Layout.cpp  Layout.h  OverlayControls.cpp  OverlayControls.h  RenderConfig.cpp  RenderConfig.h  RenderTypes.h  Renderer.cpp  Renderer.h  Theme.cpp  Theme.h  TriangleTunnelRenderer.cpp  TriangleTunnelRenderer.h  VisualizerMode.cpp  VisualizerMode.h
src/util/: ComUtil.cpp  ComUtil.h  Logger.cpp  Logger.h
